--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       <br>
       <canvas id="canvasElement" width="500" height="375"></canvas>
     </div>
-    <script src="bundle.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
